# serialport

./: CHANGELOG.md  LICENSE  README.markdown  README.md  serialport.cabal
System/Hardware/: Serialport.hs
System/Hardware/Serialport/: Posix.hsc  Types.hs  Windows.hs
System/Win32/: Comm.hsc
tests/: Tests.hs
tests/haskell_serial_test/: haskell_serial_test.ino
