Name:           serialport
Version:        0.4.4
Cabal-Version:  >= 1.6
Build-Type:     Custom
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2009-2011 Joris Putcuyps
author:         Joris Putcuyps
maintainer:     Joris.Putcuyps@gmail.com
homepage:       https://github.com/jputcu/serialport
bug-reports:    https://github.com/jputcu/serialport/issues
synopsis:       Cross platform serial port library.
description:    Cross platform haskell library for using the serial port.
category:       Hardware

source-repository head
  type:     git
  location: git://github.com/jputcu/serialport.git

Library
  Exposed-Modules:    System.Hardware.Serialport
  Other-Modules:      System.Hardware.Serialport.Types
  Build-Depends:      base >= 4 && < 5, bytestring
  ghc-options:        -Wall

  if !os(windows)
    Build-Depends:    unix
    Other-Modules:    System.Hardware.Serialport.Posix
  else
    Build-Depends:    Win32
    Other-Modules:    System.Hardware.Serialport.Windows
                      System.Win32.Comm
